# MerciEngine

./: .clang-format  .cproject  .doxyfile  .gitignore  .project  .vimrc  CMakeLists.txt  Instructions_Setup.txt  README.md  dependencies.txt  linux_build.sh  linux_rebuild.sh  mingw_build.cmd  mingw_rebuild.cmd  vs2015_x86_build.cmd
docs/: .gitignore
scripts/: format_file.cmd  format_file.sh  linux_build.sh  linux_rebuild.sh  mingw_build.cmd  mingw_rebuild.cmd  winclean.cmd
src/client/: CMakeLists.txt  main_client.cpp
src/common/: exported.h  net_common.h  typedefs.h  utility.h
src/debug/: CMakeLists.txt  debug.cpp  stacktrace.cpp
src/include/: apiClass.h  apiClassIntf.h  debug.h  debugIntf.h  memory.h
src/interface/: apiClassIntf.cpp  debugIntf.cpp
src/net/: CMakeLists.txt  apiClass.cpp
src/server/: CMakeLists.txt  main_server.cpp
src/utility/: utility.cpp
